[tool.poetry]
name = "project-euler-progress"
version = "0.1.0"
description = ""
authors = ["Andre Pretorius <andre.pretorius@modec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
